# Automated-ROI-customizable-batch-CT-to-BMD-mapping-Pipeline

./: .gitignore  AGENTS.md  README.md  atlasbmd.spec  build_windows_release.bat  launch_app.bat  launch_app.ps1  launch_fast_refinement_dev.bat  launch_refinement_dev.bat  pyproject.toml  requirements.txt
scripts/: audit_pipeline_performance.py  draw_manuscript_pipeline_drawio.py  draw_manuscript_pipeline_drawio_manuscript.py  draw_manuscript_pipeline_drawio_manuscript_narrow.py  draw_manuscript_pipeline_drawio_manuscript_narrow_compact.py  draw_manuscript_pipeline_drawio_manuscript_narrow_extra_compact.py  draw_manuscript_pipeline_drawio_simplified.py  draw_pipeline_flow_diagram.py  export_drawio_vector.py  generate_npj_performance_tables.py  make_manuscript_interface_figure.py
src/ct_to_bmd_studio/: __init__.py  __main__.py  main.py
src/ct_to_bmd_studio/core/: __init__.py  atlas.py  edit_ops.py  export.py  image_io.py  inventory.py  models.py  pipeline.py  refinement.py  registration.py  segmentation_backends.py  totalseg_labels.py
src/ct_to_bmd_studio/ui/: __init__.py  app.py  atlas_plane_selector.py  bmd_csv_viewer.py  qt_app.py  qt_vtk_viewer.py  render_bridge.py  state.py  viewer_manifest.py
src/ct_to_bmd_studio/ui/widgets/: __init__.py  common.py
tests/: test_atlas.py  test_edit_ops.py  test_inventory.py  test_pipeline.py  test_qt_app_smoke.py  test_refinement.py  test_registration.py  test_render_bridge.py  test_state.py  test_totalseg_backend_paths.py  test_totalseg_labels.py  test_ui_smoke.py  test_viewer_manifest.py
(+8 files in other folders)
