[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "atlasbmd"
version = "0.1.0"
description = "AtlasBMD: Windows-first PySide6 and VTK CT-to-BMD segmentation studio."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
  { name = "OpenAI Codex" }
]
dependencies = [
  "nibabel>=5.2",
  "numpy>=1.26",
  "PySide6>=6.8",
  "PyMaxflow>=1.3",
  "scikit-image>=0.24",
  "scipy>=1.13",
  "vtk>=9.3",
]

[project.optional-dependencies]
build = [
  "pyinstaller>=6.20",
]
legacy-ui = [
  "dearpygui>=1.11",
]
registration = [
  "SimpleITK>=2.3",
]
totalseg = [
  "TotalSegmentator>=2.13",
]
reporting = [
  "pandas>=2.2",
]

[project.scripts]
atlasbmd = "ct_to_bmd_studio.main:main"
atlasbmd-refinement-dev = "ct_to_bmd_studio.main:refinement_dev_main"
atlasbmd-fast-refinement-dev = "ct_to_bmd_studio.main:fast_refinement_dev_main"
ct-to-bmd-studio = "ct_to_bmd_studio.main:main"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
